Add margin and line separation

--- a/html/index.css
+++ b/html/index.css
@@ -1,3 +1,13 @@
+body {
+  background-color: #1a1a1a;
+  line-height: 1.5;
+  font-size: 16px;
+  font-family: Mono;
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 h2 {
   color:#b5e853;
 }
@@ -6,13 +16,8 @@ p {
   color:#eaeaea;
 }
 
-body {
-  background-color: #1a1a1a;
-  font-size: 16px;
-}
 
 div.sourceCode {
-  line-height: 1.5;
   background:rgba(0,0,0,0.9);
   border:1px solid rgba(255,255,255,0.15);
   color:#eaeaea;
