--- a/html/src/styles.css
+++ b/html/src/styles.css
@@ -6,6 +6,7 @@ body {
   width: 90%;
   max-width: 1000px;
   margin: 0 auto;
+  color:#eaeaea;
 }
 
 h1, h2, h3, ul, li {
@@ -14,10 +15,6 @@ h1, h2, h3, ul, li {
 
 ul, li {
   list-style-type: disc;
-}
-
-p {
-  color:#eaeaea;
 }
 
 a {
@@ -30,4 +27,10 @@ div.sourceCode {
   color:#eaeaea;
   border-radius:2px;
   padding-left:10px;
+}
+
+blockquote {
+ color:#aaa;
+ padding-left:10px;
+ border-left:1px dotted #666
 }
