--- a/html/src/styles.css
+++ b/html/src/styles.css
@@ -13,18 +13,8 @@ h1, h2, h3 {
   color:#b5e853;
 }
 
-/* https://www.w3schools.com/howto/howto_css_bullet_color.asp */
 ul {
-  list-style: none; /* Remove default bullets */
-}
-
-ul li::before {
-  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-  color:#b5e853;
-  font-weight: bold;
-  display: inline-block; /* Needed to add space between the bullet and the text */
-  width: 1em; /* Also needed for space (tweak if needed) */
-  margin-left: -1em; /* Also needed for space (tweak if needed) */
+  list-style-image: linear-gradient(#b5e853, #b5e853);
 }
 
 a {
