--- a/html/src/styles.css
+++ b/html/src/styles.css
@@ -21,12 +21,26 @@ a {
   color: #63c0f5;
 }
 
+/* Not inline code */
 div.sourceCode {
   background:rgba(0,0,0,0.9);
   border:1px solid rgba(255,255,255,0.15);
-  color:#eaeaea;
   border-radius:2px;
   padding-left:10px;
+}
+
+/* Not inline code */
+code.sourceCode {
+  color:#eaeaea;
+  padding-left:10px;
+}
+
+code {
+  background: rgba(0,0,0,0.9);
+  padding: 0px 3px;
+  margin: 0px -3px;
+  color: #aa759f;
+  border-radius: 2px;
 }
 
 blockquote {
