Fix long horizontal code lines

--- a/html/src/styles.css
+++ b/html/src/styles.css
@@ -26,6 +26,7 @@ div.sourceCode {
   background:rgba(0,0,0,0.9);
   border:1px solid rgba(255,255,255,0.15);
   border-radius:2px;
+  overflow-y:hidden;
   padding-left:10px;
 }
 
